--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>vue-project</title>
+<!--    <meta name="viewport" content="width=device-width,initial-scale=1.0">-->
+    <title>安达顺</title>
+    <link rel="stylesheet" href="/static/js/pace/pace.css">
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
+<script type="text/javascript" src="/static/js/pace/pace.min.js"></script>
